RESOLVED FIXED37356
StorageEvent destructor should be in StorageEvent.cpp
https://bugs.webkit.org/show_bug.cgi?id=37356
Summary StorageEvent destructor should be in StorageEvent.cpp
Evan Martin
Reported 2010-04-09 13:33:56 PDT
StorageEvent destructor should be in StorageEvent.cpp
Attachments
Patch (1.92 KB, patch)
2010-04-09 13:36 PDT, Evan Martin
no flags
Evan Martin
Comment 1 2010-04-09 13:36:35 PDT
Evan Martin
Comment 2 2010-04-09 13:37:32 PDT
Comment on attachment 52985 [details] Patch (This is needed to compile under Clang.)
Evan Martin
Comment 3 2010-04-09 13:37:46 PDT
In file included from third_party/WebKit/WebCore/bindings/v8/custom/V8EventCustom.cpp:32: In file included from llvm/Debug/obj/gen/webkit/bindings/V8Event.h:25: In file included from third_party/WebKit/JavaScriptCore/wtf/HashMap.h:24: In file included from third_party/WebKit/JavaScriptCore/wtf/HashTable.h:26: In file included from third_party/WebKit/JavaScriptCore/wtf/HashTraits.h:24: In file included from third_party/WebKit/JavaScriptCore/wtf/HashFunctions.h:24: In file included from third_party/WebKit/JavaScriptCore/wtf/RefPtr.h:27: third_party/WebKit/JavaScriptCore/wtf/PassRefPtr.h:66:16: error: member access into incomplete type 'WebCore::Storage' ptr->deref(); ^ In file included from third_party/WebKit/WebCore/bindings/v8/custom/V8EventCustom.cpp:32: In file included from llvm/Debug/obj/gen/webkit/bindings/V8Event.h:25: In file included from third_party/WebKit/JavaScriptCore/wtf/HashMap.h:24: In file included from third_party/WebKit/JavaScriptCore/wtf/HashTable.h:26: In file included from third_party/WebKit/JavaScriptCore/wtf/HashTraits.h:24: In file included from third_party/WebKit/JavaScriptCore/wtf/HashFunctions.h:24: third_party/WebKit/JavaScriptCore/wtf/RefPtr.h:54:21: note: in instantiation of function template specialization 'WTF::derefIfNotNull<WebCore::Storage>' requested here ~RefPtr() { derefIfNotNull(m_ptr); } ^ In file included from third_party/WebKit/WebCore/bindings/v8/custom/V8EventCustom.cpp:53: In file included from llvm/Debug/obj/gen/webkit/bindings/V8StorageEvent.h:31: third_party/WebKit/WebCore/storage/StorageEvent.h:38:11: note: in instantiation of member function 'WTF::RefPtr<WebCore::Storage>::~RefPtr' requested here class StorageEvent : public Event { ^ In file included from third_party/WebKit/WebCore/bindings/v8/custom/V8EventCustom.cpp:41: In file included from llvm/Debug/obj/gen/webkit/bindings/V8CompositionEvent.h:28: In file included from third_party/WebKit/WebCore/dom/CompositionEvent.h:30: In file included from third_party/WebKit/WebCore/dom/UIEvent.h:27: third_party/WebKit/WebCore/page/DOMWindow.h:70:11: note: forward declaration of 'WebCore::Storage' class Storage; ^ 1 error generated.
WebKit Commit Bot
Comment 4 2010-04-09 18:56:25 PDT
Comment on attachment 52985 [details] Patch Clearing flags on attachment: 52985 Committed r57394: <http://trac.webkit.org/changeset/57394>
WebKit Commit Bot
Comment 5 2010-04-09 18:56:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.