2010-04-09  Evan Martin  <evan@chromium.org>

Reviewed by Darin Adler.

        StorageEvent destructor should be in StorageEvent.cpp
        https://bugs.webkit.org/show_bug.cgi?id=37356

        Because Storage is forward-declared in StorageEvent.h, we need to define
        the StorageEvent destructor in the .cpp file so that the RefPtr<Storage>
        destructor has a complete type for Storage.

        * storage/StorageEvent.cpp:
        (WebCore::StorageEvent::~StorageEvent):
        * storage/StorageEvent.h:

Canonical link: https://commits.webkit.org/48683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57394 268f45cc-cd09-0410-ab3c-d52691b4dbfc